# portfolio-web

./: .Dockerignore  .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
axum/: Cargo.toml  Dockerfile  fly.toml
axum/.sqlx/: query-1872292b9565f157ad30f0e1170f23fad9f9717be7abf0211fe1471d8ff03610.json  query-a2d2d8b4e02ad8e7571b0e26bcfdb7312422eda26e9ecf96ab358d020a512a6a.json
axum/migrations/: 0002_add_user.sql  0002_add_user_squashed.sql
axum/src/: main.rs
axum/src/history_fm/weekly_charts/: album.rs  artist.rs  chart.rs  mod.rs  track.rs  user_info.rs
backend/: Makefile.toml
backend/src/history_fm/weekly_charts/: album.rs  artist.rs
frontend/: Dockerfile  package-lock.json  package.json
migrations/: 0001_initial_spotify_vis.sql  0002_add_user.sql
src/: main.rs  schema.rs
src/history_fm/: mod.rs  weekly_charts.rs
src/history_fm/weekly_charts/: artist.rs  mod.rs  track.rs
svelte/: .eslintrc.cjs  .prettierrc  ;  Dockerfile  bun.lockb  codegen.yml  components.json  fly.toml  jsconfig.json  package-lock.json  package.json  svelte.config.js  vite.config.js
svelte/src/: app.d.ts  app.html  app.postcss
svelte/src/lib/assets/: oembed.json
svelte/src/queries/: artistChart.graphql  chart.graphql
svelte/src/routes/: +layout.svelte  +page.svelte  NavBar.svelte  PortfolioCard.svelte  StateStore.ts  TechStackImage.svelte
svelte/src/routes/charts/: +layout.server.ts  +layout.svelte  +page.svelte  FormDataStore.ts  GenerateOptions.svelte
svelte/src/routes/oembed/: +server.ts
svelte/src/routes/resume/: +page.svelte
svelte/src/routes/workout/: +page.server.ts  +page.svelte  hooks.server.ts
(+18 files in other folders)
