[package]
name = "amrrz_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "json",
    "macros",
] }
async-graphql = "6.0.0"
async-graphql-axum = "6.0.0"
axum = { version = "0.6.19", features = ["macros"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenv = "0.15.0"
surf = "2.3.2"
futures = "0.3.28"
